manifests/photon/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: photon
  name: photon-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photon
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: photon
    spec:
      containers:
      - image: ghcr.io/xyphyn/photon:v1.31.4
        name: photon
        resources: {}
status: {}
