manifests/photon/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-ingress
spec:
  rules:
    - host: phtn.termz.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photon-service
                port:
                  number: 80
    - host: phtn.terminalnode.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photon-service
                port:
                  number: 80
